k8s/files/base/issuer-node-api-ui-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: issuer-node-api-ui-deployment
  labels:
    app: issuer-node
spec:
  replicas: 1
  selector:
    matchLabels:
      app: issuer-node-api-ui
  template:
    metadata:
      labels:
        app: issuer-node-api-ui # Label for the pod and will be used in the service
    spec:
      containers:
        - name: api-ui
          image: martinsaporiti/issuernode:1.0.0
          imagePullPolicy: "Always"
          ports:
            - containerPort: 3002
          command: ["sh", "-c"]
          args: ["./migrate; ./platform_ui"]

          livenessProbe:
            httpGet:
              path: /status
              port: 3002
              httpHeaders:
              - name: Custom-Header
                value: Awesome
            initialDelaySeconds: 3
            periodSeconds: 60
