k8s/files/base/issuer-node-notifications.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: issuer-node-notifications-deployment
  labels:
    app: issuer-node
spec:
  replicas: 1
  selector:
    matchLabels:
      app: issuer-node-notifications
  template:
    metadata:
      labels:
        app: issuer-node-notifications # Label for the pod and will be used in the service
    spec:
      containers:
        - name: notifications
          image: martinsaporiti/issuernode:1.0.0
          imagePullPolicy: "IfNotPresent"
          command: ["sh", "-c"]
          args: ["./notifications"]
