k8s/files/base/issuer-node-pending-publisher.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: issuer-node-pending-publisher-deployment
  labels:
    app: issuer-node
spec:
  replicas: 1
  selector:
    matchLabels:
      app: issuer-node-pending-publisher
  template:
    metadata:
      labels:
        app: issuer-node-pending-publisher # Label for the pod and will be used in the service
    spec:
      containers:
        - name: pending-publisher
          image: martinsaporiti/issuernode:1.0.0
          imagePullPolicy: "Always"
          command: ["sh", "-c"]
          args: ["./pending_publisher"]
