k8s/files/base/redis-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: issuer-node-redis-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: issuer-node-redis
  template:
    metadata:
      labels:
        app: issuer-node-redis
    spec:
      containers:
      - name: redis
        image: redis:alpine
        ports:
            - containerPort: 6379
        resources:
          limits:
            cpu: "1"
            memory: 2Gi
          requests:
            cpu: "0.5"
            memory: 1Gi
