k8s/files/base/issuer-node-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: issuer-node-api-svc
  labels:
    app: issuer-node
spec:
  ports:
    - port: 3001
      targetPort: 3001
      protocol: TCP
  selector:
    app: issuer-node-api
