k8s/files/base/issuer-node-api-ui-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: issuer-node-api-ui-svc
  labels:
    app: issuer-node
spec:
  ports:
    - port: 3002
      targetPort: 3002
      protocol: TCP
  selector:
    app: issuer-node-api-ui
