k8s/files/base/issuer-node-ui-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: issuer-node-ui-svc
  labels:
    app: issuer-node
spec:
  ports:
    - port: 8080
      targetPort: 80
      protocol: TCP
  selector:
    app: issuer-node-ui
