k8s/files/base/redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: issuer-node-redis-svc
  labels:
    app: issuer-node
spec:
  ports:
    - port: 6379
      targetPort: 6379
      protocol: TCP
  selector:
    app: issuer-node-redis
