k8s/files/base/vault-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: issuer-node-vault-svc
  labels:
    app: issuer-node
spec:
  ports:
    - port: 8200
      targetPort: 8200
      protocol: TCP
  selector:
    app: issuer-node-vault
