k8s/files/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: issuer-node-ingress
  labels:
    app: issuer-node

spec:
  rules:
    - host: "issuer-node-api.info"
      http:
        paths:
          - path: /v1/
            pathType: Prefix
            backend:
              service:
                name: issuer-node-api-svc
                port:
                  number: 3001
          - path: /
            pathType: Prefix
            backend:
              service:
                name: issuer-node-api-svc
                port:
                  number: 3001

    - host: "issuer-node-api-ui.info"
      http:
        paths:
        - path: /v1/
          pathType: Prefix
          backend:
            service:
              name: issuer-node-api-ui-svc
              port:
                number: 3002
        - path: /
          pathType: Prefix
          backend:
            service:
              name: issuer-node-api-ui-svc
              port:
                number: 3002

    - host: "issuer-ui.info"
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: issuer-node-ui-svc
              port:
                number: 8080
